--- a/style.css
+++ b/style.css
@@ -59,24 +59,22 @@ a{
     margin-left: auto;
     margin-right: auto;
 }
+footer{
+    height: 100px;
+}
 .bottom-text {
     padding: 20px;
     text-align: center;
-    margin-top: 10%;
     font-size: 15px;
   }
 /* links */
 .github a i:hover , .codepen a i:hover{
     background: #2B3035;
     transition: .5s;
-    padding: 5px;
-    border-radius: 5px;
-    font-size: 60px;
+    border-radius: 27px;
 }
 .insta a i:hover{
-padding: 5px;
 transition: .5s;
-font-size: 60px;
 border-radius: 5px;
 background: #833ab4;  
 background: -webkit-linear-gradient(to right, #fcb045, #fd1d1d, #833ab4);  /* Chrome 10-25, Safari 5.1-6 */
@@ -84,21 +82,28 @@ background: linear-gradient(to right, #fcb045, #fd1d1d, #833ab4); /* W3C, IE 10+
 }
 .twitter a i:hover{
     border-radius: 5px;
-    padding: 5px;
     transition: .5s;
     background: #00B4DB;  /* fallback for old browsers */
     background: -webkit-linear-gradient(to right, #0083B0, #00B4DB);  /* Chrome 10-25, Safari 5.1-6 */
     background: linear-gradient(to right, #0083B0, #00B4DB); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
 }
 .linked a i:hover{
-    padding: 5px;
+    padding: 2px;
     border-radius: 5px;
     transition: .5s;
     background: #0072AC;
 }
 .mail a i:hover{
     background: #870000;
-    padding: 5px;
     transition: .5s;
+    padding: 1px;
     border-radius: 5px;
+}
+@media screen and (max-width:480px) {
+    .mail a i:hover{
+        background: #564905;
+    }
+    footer{
+       padding-top: 30%;
+    }
 }
